test/testdata/classes/methods/redefined_parameter_error.lox
class Foo {
  bar(x) {
    // error: 'x' has already been declared
    // lint error: 'x' has already been declared
    var x = 1;
    _ = x;
  }
}

_ = Foo;
